Bug 445455 - If the main tabbox switcher fails to load, the alternative switcher will also fail to load
Summary: If the main tabbox switcher fails to load, the alternative switcher will also...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: tabbox (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-14 01:55 UTC by Ismael Asensio
Modified: 2022-07-13 22:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ismael Asensio 2021-11-14 01:55:00 UTC
SUMMARY
When the main tabbox switcher fails to load, an alternative working switcher will also fail to load (or viceversa).
To be able to load the working switcher, it has to be reloaded or kwin restarted

STEPS TO REPRODUCE
1. Set a failing window switcher as the main switcher, and a working one as the alternative
2. Try to launch the failing switcher: It will fail to load and notify the error
3. Now try to launch the alternative (working) switcher

OBSERVED RESULT
The alternative working switcher also fails to load

EXPECTED RESULT
Every switcher should only be held accountable by there own merits  :)

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 21.10
KDE Plasma Version: 5.22.80
KDE Frameworks Version: 5.89.0
Qt Version: 5.15.2
Kernel Version: 5.13.0-21-generic (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-8565U CPU @ 1.80GHz
Memory: 15.3 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 620
Comment 1 Bug Janitor Service 2022-07-12 19:00:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2642
Comment 2 Ismael Asensio 2022-07-13 22:38:31 UTC
Git commit 6914c813243a693cc170043abf2b600b2acfc660 by Ismael Asensio.
Committed on 13/07/2022 at 22:15.
Pushed by iasensio into branch 'master'.

TabBox: Fix loading a different switcher after one has failed

We need to reset the QML Item on failure or trying to load a
different switcher afterwards will pick a wrong codepath and
also fail.
FIXED-IN: 5.25.4

M  +2    -1    src/tabbox/tabboxhandler.cpp

https://invent.kde.org/plasma/kwin/commit/6914c813243a693cc170043abf2b600b2acfc660
Comment 3 Ismael Asensio 2022-07-13 22:40:49 UTC
Git commit cb768d016cde974878c8ff15dbfef9ab2738230d by Ismael Asensio.
Committed on 13/07/2022 at 22:40.
Pushed by iasensio into branch 'cherry-pick-6914c813'.

TabBox: Fix loading a different switcher after one has failed

We need to reset the QML Item on failure or trying to load a
different switcher afterwards will pick a wrong codepath and
also fail.
FIXED-IN: 5.25.4


(cherry picked from commit 6914c813243a693cc170043abf2b600b2acfc660)

M  +2    -1    src/tabbox/tabboxhandler.cpp

https://invent.kde.org/plasma/kwin/commit/cb768d016cde974878c8ff15dbfef9ab2738230d
Comment 4 Ismael Asensio 2022-07-13 22:41:57 UTC
Git commit ebdab44c31efe4ad760951e5811e635089e51918 by Ismael Asensio.
Committed on 13/07/2022 at 22:41.
Pushed by iasensio into branch 'Plasma/5.25'.

TabBox: Fix loading a different switcher after one has failed

We need to reset the QML Item on failure or trying to load a
different switcher afterwards will pick a wrong codepath and
also fail.
FIXED-IN: 5.25.4


(cherry picked from commit 6914c813243a693cc170043abf2b600b2acfc660)

M  +2    -1    src/tabbox/tabboxhandler.cpp

https://invent.kde.org/plasma/kwin/commit/ebdab44c31efe4ad760951e5811e635089e51918