TabBox: Fix loading a different switcher after one has failed

We need to reset the QML Item on failure or trying to load a
different switcher afterwards will pick a wrong codepath and
also fail.

BUG: 445455
FIXED-IN: 5.25.4


(cherry picked from commit 6914c813243a693cc170043abf2b600b2acfc660)